--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,104 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alembic==1.14.1
+annotated-types==0.7.0
+anyio==4.8.0
+appdirs==1.4.4
+backoff==2.2.1
+blinker==1.9.0
+boto3==1.36.21
+botocore==1.36.21
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+dacite==1.6.0
+dagshub==0.5.4
+dagshub-annotation-converter==0.1.3
+databricks-sdk==0.44.1
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+docker==7.1.0
+exceptiongroup==1.2.2
+Flask==3.1.0
+fonttools==4.56.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+gql==3.5.0
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jmespath==1.0.1
+joblib==1.4.2
+kiwisolver==1.4.8
+lxml==5.3.1
+Mako==1.3.9
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.0
+mdurl==0.1.2
+mlflow==2.20.2
+mlflow-skinny==2.20.2
+multidict==6.1.0
+mypy-extensions==1.0.0
+numpy==2.2.3
+opentelemetry-api==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
+packaging==24.2
+pandas==2.2.3
+pathvalidate==3.2.3
+pillow==11.1.0
+propcache==0.2.1
+protobuf==5.29.3
+pyarrow==18.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+pywin32==308
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rsa==4.9
+s3transfer==0.11.2
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
+semver==3.0.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.38
+sqlparse==0.5.3
+tenacity==9.0.0
+threadpoolctl==3.5.0
+treelib==1.7.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+waitress==3.0.2
+Werkzeug==3.1.3
+wrapt==1.17.2
+xgboost==2.1.4
+yarl==1.18.3
+zipp==3.21.0
